@@ -1,3 +1,6 @@
+13/07/2022 v.6.61 Neha
+	* [ZB-9267] Credit Note for Non-Managed Flats
+
 13/07/2022 v.6.60 Neha
 	* [ZB-9323] Sum Amount Missing (Odoo-default)
 
